# salty

./: Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: rust.yml
salty-cli/: Cargo.toml  README.md  build.rs
salty-cli/src/: main.rs  options.rs
salty-service/: Cargo.toml
salty-service/proto/: salty.proto
salty-service/src/: cmd_processor.rs  config.rs  lib.rs  service.rs
salty-utils/: Cargo.toml
salty-utils/src/: lib.rs
salty-utils/src/security/: cipher.rs  hasher.rs  mod.rs  password.rs  workspace.rs
salty-utils/src/storage/: error.rs  harddisk_storage.rs  mod.rs  workspace.rs
salty-utils/src/testing/: mod.rs
salty-utils/src/vault/: account.rs  commands.rs  mod.rs
salty_cli/: Cargo.toml
salty_cli/src/: cli_client.rs  generator.rs  lib.rs  main.rs  options.rs  vault_cli.rs
salty_vault/: Cargo.toml  build.rs
salty_vault/proto/: salty.proto
salty_vault/src/: lib.rs
salty_vault/src/storage/: error.rs  harddisk_storage.rs  mod.rs
salty_vault/src/utils/: cipher.rs  mod.rs  workspace.rs
salty_vault/src/vault/: account.rs  mod.rs  old_vault.rs  vault.rs
src/: account.rs  hasher.rs  lib.rs  main.rs  manager.rs  options.rs  password.rs  storage.rs
src/cli_commands/: generator.rs  mod.rs  vault_cli.rs
src/options/: mod.rs
src/password/: mod.rs
src/utils/: authenticator.rs  hasher.rs  mod.rs  password.rs
src/vault/: account.rs  mod.rs  vault.rs
src/wrappers/: hasher.rs  mod.rs  password.rs
tests/: integration-test.rs
uml/: architecture.puml
web_client/: main.rs
