[package]
name = "yaovault"
version = "0.1.0"
edition = "2018"
authors = ["Andrew O'Doherty <andrew.olv@gmail.com>"]
description = "yaovault (Yet Another Open Vault) is an open implementation of a password management system."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
passwords = "3"
structopt = "0.3"

pbkdf2 = "0.9"
rand_core = { version = "0.6", features = ["std"] }