[package]
name = "salty-cli"
version = "0.1.0"
edition = "2018"
authors = ["Andrew O'Doherty <andrew.olv@gmail.com>"]
description = "salty-cli is a crate that provides a multiplatform CLI based client for accessing a Salty service vault."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
passwords = "3"

question = "0.2.2"
tonic = "0.6.2"
prost = "0.9.0"

salty-utils = { path = "../salty-utils" }
tokio = { version = "1.17.0", features = ["full"] }
serde_json = "1.0.79"

salty-service = { path = "../salty-service" }

[build-dependencies]
tonic-build = "0.6.2"

[[bin]]
name = "salty-cli"
path = "src/main.rs"
