[package]
name = "salty-service"
version = "0.1.0"
edition = "2018"
authors = ["Andrew O'Doherty <andrew.olv@gmail.com>"]
description = "The vault service can handle requests for a limit period of time before shutting down."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tonic = "0.6.2"
prost = "0.9.0"
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["time"] }
futures = "0.3.21"
clap = { version = "3.1.2", features = ["derive"] }
salty-utils = { path = "../salty-utils" }

[build-dependencies]
tonic-build = "0.6.2"

[[bin]]
name = "salty-service"
path = "src/bin/main.rs"
