[package]
name = "salty-utils"
version = "0.1.0"
edition = "2018"
authors = ["Andrew O'Doherty <andrew.olv@gmail.com>"]
description = "This crate is used as framework for building other components of the salty system."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
passwords = "3"
rpassword = "5.0.1"
question = "0.2.2"
# check password strength:
zxcvbn = "2.1.1"
#convert enum cammel case to human readable text
convert_case = "0.4.0"
strum_macros = "0.21.0"

pbkdf2 = "0.9"
rand_core = { version = "0.6", features = ["std"] }

# serialize a struct to a vec
borsh = "0.9"
# encrypted file
cocoon = "0.3.0"

# TOPL authentication protocol
boringauth = "0.9.0"
anyhow = "1.0.44"

dirs = "4.0.0"
serde = "1.0.136"


rand = "0.8.5"
derivative = "2.2.0"

clap = "3.1.3"
