[package]
name = "salty_vault"
version = "0.1.0"
edition = "2018"
authors = ["Andrew O'Doherty <andrew.olv@gmail.com>"]
description = "Salty is an open implementation of a password management system."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
passwords = "3"
rpassword = "5.0.1"
question = "0.2.2"
# check password strength:
zxcvbn = "2.1.1"
#convert enum cammel case to human readable text
convert_case = "0.4.0"
strum_macros = "0.21.0"

pbkdf2 = "0.9"
rand_core = { version = "0.6", features = ["std"] }

# serialize a struct to a vec
borsh = "0.9"
# encrypted file
cocoon = "0.3.0"

# TOPL authentication protocol
boringauth = "0.9.0"
anyhow = "1.0.44"

dirs = "4.0.0"
serde = "1.0.125"

rand = "0.8.5"
derivative = "2.2.0"

tonic = "0.6.2"
prost = "0.9.0"
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["time"] }
futures = "0.3.21"
clap = { version = "3.1.2", features = ["derive"] }

[[bin]]
name = "daemon"
path = "src/bin/service/main.rs"

[build-dependencies]
tonic-build = "0.6.2"
